--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -29,7 +29,7 @@ jobs:
 
   # TODO: remove when done testing...
   build-desktop-application:
-    name: Build ${{ matrix.platform }} (${{ matrix.args }}) desktop application
+    name: Build desktop application (${{ matrix.os }}-${{ matrix.arch }})
     runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
@@ -37,17 +37,23 @@ jobs:
         # https://docs.github.com/en/actions/how-tos/write-workflows/choose-where-workflows-run/choose-the-runner-for-a-job#standard-github-hosted-runners-for-public-repositories
         include:
           - platform: macos-latest
-            args: "--arch=arm64"
+            os: macos
+            arch: arm64
           - platform: macos-latest
-            args: "--arch=x64"
+            os: macos
+            arch: x64
           - platform: windows-11-arm
-            args: "--arch=arm64"
+            os: windows
+            arch: arm64
           - platform: windows-latest
-            args: "--arch=x64"
+            os: windows
+            arch: x64
           - platform: ubuntu-latest
-            args: "--arch=x64"
+            os: linux
+            arch: x64
           - platform: ubuntu-24.04-arm
-            args: "--arch=arm64"
+            os: linux
+            arch: arm64
     defaults:
       run:
         working-directory: desktop_app
@@ -70,7 +76,7 @@ jobs:
       # See https://brunoscheufler.com/blog/2023-11-12-setting-up-hosted-macos-github-actions-workflows-for-electron-builds
       # was super helpful for getting macOS signing working on GitHub Actions
       - name: Install Apple codesigning certificate
-        if: matrix.platform == 'macos-latest'
+        if: matrix.os == 'macos'
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_SIGNING_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.APPLE_SIGNING_CERTIFICATE_PASSWORD }}
