--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -1,5 +1,5 @@
-name: Setup node/pnpm + install frontend dependencies
-description: Setup node/pnpm + install frontend dependencies
+name: Setup node/pnpm + install dependencies
+description: Setup node/pnpm + install dependencies
 runs:
   using: composite
   steps:
@@ -21,7 +21,7 @@ runs:
       run: pnpm install --frozen-lockfile --prefer-offline
 
     # This step is crucial for ensuring native modules are compiled against the correct Electron version.
-    - name: Rebuild Electron native modules
-      shell: bash
-      working-directory: desktop_app
-      run: pnpm electron-rebuild --force
+    # - name: Rebuild Electron native modules
+    #   shell: bash
+    #   working-directory: desktop_app
+    #   run: pnpm electron-rebuild --force
