--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -87,6 +87,10 @@ jobs:
           - platform: ubuntu-24.04-arm
             os: linux
             arch: arm64
+    permissions:
+      # publisher requires write permissions to the repo's contents to create new releases
+      # https://www.electronforge.io/config/publishers/github#authentication
+      contents: write
     defaults:
       run:
         working-directory: desktop_app
