--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -11,6 +11,8 @@ runs:
     - name: Setup Node.js
       uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
+        # NOTE: we are currently using Electron 37.0.x, which comes bundled with v22.16.0 of Node
+        # https://www.electronjs.org/docs/latest/tutorial/electron-timelines
         node-version: "22.16.0"
         cache: "pnpm"
         cache-dependency-path: desktop_app/pnpm-lock.yaml
@@ -21,7 +23,7 @@ runs:
       run: pnpm install --frozen-lockfile --prefer-offline
 
     # This step is crucial for ensuring native modules are compiled against the correct Electron version.
-    # - name: Rebuild Electron native modules
-    #   shell: bash
-    #   working-directory: desktop_app
-    #   run: pnpm electron-rebuild --force
+    - name: Rebuild Electron native modules
+      shell: bash
+      working-directory: desktop_app
+      run: pnpm electron-rebuild --force
