--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -140,7 +140,7 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: pnpm publish
+        run: pnpm run publish
 
   # create-github-release:
   #   name: Create GitHub release
