--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Archestra",
+  "productName": "Archestra",
   "version": "0.0.1",
   "description": "Enterprise MCP Platform for AI Agents",
   "repository": {
@@ -22,6 +23,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "prepare": "cd .. && husky desktop_app/.husky",
     "typecheck": "tsc --noEmit",
     "test": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/vitest/dist/cli.js --config vite.main.config.ts",
     "prettier": "ELECTRON_RUN_AS_NODE=1 pnpm exec electron ./node_modules/prettier/bin/prettier.cjs --write .",
