--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -3,6 +3,7 @@
   "productName": "Archestra",
   "version": "0.0.1",
   "description": "Enterprise MCP Platform for AI Agents",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/archestra-ai/archestra"
