--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -35,9 +35,7 @@ jobs:
       # https://www.electronforge.io/config/publishers/github#authentication
       contents: write
     with:
-      # TODO: when done testing, set to true
-      dry_run: false
-      # dry_run: true
+      dry_run: true
     secrets:
       ARCHESTRA_RELEASER_GITHUB_APP_ID: ${{ secrets.ARCHESTRA_RELEASER_GITHUB_APP_ID }}
       ARCHESTRA_RELEASER_GITHUB_APP_PRIVATE_KEY: ${{ secrets.ARCHESTRA_RELEASER_GITHUB_APP_PRIVATE_KEY }}
