debug apple notary's service

--- a/.github/workflows/build-desktop-application.yml
+++ b/.github/workflows/build-desktop-application.yml
@@ -106,4 +106,6 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: pnpm run publish ${{ inputs.dry_run && '--dry-run' }}
+        # TODO: the following DEBUG env var can be removed once we're done debugging Apple's "notary service" taking forever
+        # https://github.com/electron/notarize/issues/197#issuecomment-2153484132
+        run: DEBUG=electron-notarize* pnpm run publish ${{ inputs.dry_run && '--dry-run' }}
