--- a/.github/workflows/build-desktop-application.yml
+++ b/.github/workflows/build-desktop-application.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       dry_run:
-        description: Whether to run make or publish. If true, make will be run. If false, publish will be run.
+        description: Whether to run publish in dry run mode or not (i.e. don't actually upload the build to GitHub)
         type: boolean
         required: false
         default: false
@@ -111,16 +111,20 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          # TODO: the following DEBUG env var can be removed once we're done debugging Apple's "notary service" taking forever
+          # TODO: the following DEBUG env var can be removed once we're done debugging Apple's "notary service"
+          # taking foreverrrrrrrrrrrrrr
+          #
           # https://github.com/electron/notarize/issues/197#issuecomment-2153484132
+          #
+          # NOTE: once we remove this, we can also just combine the below Build step into this one....
           DEBUG: electron-notarize*
-        run: pnpm run ${{ inputs.dry_run && 'make' || 'publish' }}
+        run: pnpm run publish${{ inputs.dry_run && ' --dry-run' || '' }}
 
       - name: Build desktop application (Windows/Linux)
         if: matrix.os != 'macos'
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        run: pnpm run ${{ inputs.dry_run && 'make' || 'publish' }}
+        run: pnpm run publish${{ inputs.dry_run && ' --dry-run' || '' }}}
 
       # https://brunoscheufler.com/blog/2023-11-12-setting-up-hosted-macos-github-actions-workflows-for-electron-builds
       - name: Clean up keychain
