--- a/desktop_app/package.json
+++ b/desktop_app/package.json
@@ -112,7 +112,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/electron": "^6.9.0",
     "@shikijs/transformers": "^3.9.1",
-    "@tanstack/react-router": "^1.131.13",
+    "@tanstack/react-router": "^1.131.18",
+    "@tanstack/react-router-devtools": "^1.131.22",
     "@vitejs/plugin-react": "^5.0.0",
     "ai": "^5.0.0",
     "better-sqlite3": "^12.2.0",
