--- a/oauth_proxy/package.json
+++ b/oauth_proxy/package.json
@@ -1,18 +1,18 @@
 {
   "name": "oauth-proxy",
-  "version": "1.0.0",
-  "description": "OAuth proxy service",
+  "version": "2.0.0",
+  "description": "OAuth proxy server for secure PKCE-based token exchange",
   "main": "src/server.js",
-  "bin": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "google-auth-library": "^9.0.0",
-    "googleapis": "^128.0.0"
+    "fastify": "^4.25.0",
+    "@fastify/cors": "^8.5.0",
+    "@fastify/formbody": "^7.4.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
